--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <a href="#contacts">Контакты</a>
         </nav>
         <div>
+            a href="tel:+79039999999">+7 903 999-99-99</a>
+            <button>Заказать звонок</button> 
+        </div>
+        <div>
             <a href="tel:+79039999999">+7 903 999-99-99</a>
             <button>Заказать звонок</button>
         </div>
